--- a/app_python/Dockerfile
+++ b/app_python/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Install required packages
 COPY requirements.txt /app/
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the main code
 COPY . /app
