--- a/app_python/Dockerfile
+++ b/app_python/Dockerfile
@@ -11,7 +11,4 @@ COPY . /app
 
 EXPOSE 5000
 
-# Configure environement variables
-ENV FLASK_ENV=development
-
-CMD [ "flask", "run", "--host", "0.0.0.0", "--port", "5000" ]
+CMD [ "gunicorn", "-b", "0.0.0.0:5000", "app:app" ]
