--- a/app_python/Dockerfile
+++ b/app_python/Dockerfile
@@ -1,13 +1,17 @@
 FROM python:3.9.6-slim-buster
 
-WORKDIR /app
+RUN adduser --disabled-password app && chown -R app /home/app
+
+WORKDIR /home/app
 
 # Install required packages
-COPY requirements.txt /app/
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+USER app
+
 # Copy the main code
-COPY . /app
+COPY --chown=app:app app.py .
 
 EXPOSE 5000
 
