--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 		"ms-python.python",
 		"ms-python.vscode-pylance",
 		"octref.vetur",
-		"dbaeumer.vscode-eslint"
+		"dbaeumer.vscode-eslint",
+		"hashicorp.terraform"
 	]
 }
