--- a/app_python/Dockerfile
+++ b/app_python/Dockerfile
@@ -15,4 +15,4 @@ COPY --chown=app:app app.py .
 
 EXPOSE 5000
 
-CMD [ "gunicorn", "-b", "0.0.0.0:5000", "app:app" ]
+CMD [ "gunicorn", "-b", "0.0.0.0:5000", "--access-logfile", "-", "app:app" ]
