--- a/k8s/charts/app_python/values.yaml
+++ b/k8s/charts/app_python/values.yaml
@@ -10,6 +10,9 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
+secrets:
+  name: my-api-key
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
